app1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-server-service1
spec:
  type: LoadBalancer
  ports:
  - name: backend-server-port1
    port: 9001
    targetPort: 9001
    protocol: TCP
  - name: opa-server-port1
    port: 8181
    targetPort: 8181
    protocol: TCP
  # the selector is used to link pods to services
  selector:
    app: backend-server-app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-server1
spec:
  # all pods matching this selector belong to this deployment
  selector:
    matchLabels:
      app: backend-server-app1
  template:
    metadata:
      # the other side of the link between services and pods
      labels:
        app: backend-server-app1
    spec:
      containers:
      - name: envoy1
        image: envoyproxy/envoy-alpine:v1.14.1
        imagePullPolicy: Always
        args: ["-l", "debug", "--local-address-ip-version", "v4", "-c", "/run/envoy/envoy1_new.yaml"]
        ports:
        - containerPort: 9001
        volumeMounts:
        - name: envoy-config1
          mountPath: "/run/envoy"
          readOnly: true
        - name: spire-agent-socket1
          mountPath: /run/spire/sockets
          readOnly: true
      - name: backend-server1
        image: gcr.io/nucloud-gcp8/lopc-iam/backend-server:latest
        ports:
        - containerPort: 5001
      - name: opa-server1
        image: openpolicyagent/opa:latest-envoy
        imagePullPolicy: Always
        args: 
        - "run"
        - "--server"
        - "--addr=localhost:8181"
        - "--set=plugins.envoy_ext_authz_grpc.addr=:9191"
        - "--set=plugins.envoy_ext_authz_grpc.path=envoy/authz/allow"
        - "--set=decision_logs.console=true"
        - "--set=status.console=true"
        - "--ignore=.*"
        - "--config-file=/run/config/config1.yaml"
        ports:
        - containerPort: 9191
        - containerPort: 8181
        volumeMounts:
          - name: backend-opa-config1
            mountPath: /run/config
            readOnly: true
      volumes:
      - name: backend-opa-config1
        configMap:
          name: backend-opa-config1
      - name: envoy-config1
        configMap:
          name: backend-envoy1
      - name: spire-agent-socket1
        hostPath:
          path: /run/spire/sockets
          type: Directory
