app2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-server-service2
spec:
  type: LoadBalancer
  ports:
  - name: backend-server-port2
    port: 9002
    targetPort: 9002
    protocol: TCP
  # the selector is used to link pods to services
  selector:
    app: backend-server-app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-server2
spec:
  # all pods matching this selector belong to this deployment
  selector:
    matchLabels:
      app: backend-server-app2
  template:
    metadata:
      # the other side of the link between services and pods
      labels:
        app: backend-server-app2
    spec:
      containers:
      - name: envoy2
        image: envoyproxy/envoy-alpine:v1.14.1
        imagePullPolicy: Always
        args: ["-l", "debug", "--local-address-ip-version", "v4", "-c", "/run/envoy/envoy2_new.yaml"]
        ports:
        - containerPort: 9002
        volumeMounts:
        - name: envoy-config2
          mountPath: "/run/envoy"
          readOnly: true
        - name: spire-agent-socket2
          mountPath: /run/spire/sockets
          readOnly: true
      - name: backend-server2
        image: gcr.io/nucloud-gcp8/lopc-iam/backend-server2:latest
        ports:
        - containerPort: 5002
      volumes:
      - name: envoy-config2
        configMap:
          name: backend-envoy2
      - name: spire-agent-socket2
        hostPath:
          path: /run/spire/sockets
          type: Directory
