envoy1.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
                - name: backend1
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: service1
            # http_filters:
            # - name: envoy.ext_authz
            #   typed_config:
            #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            #     with_request_body:
            #       max_request_bytes: 8192
            #       allow_partial_message: true
            #     failure_mode_allow: false
            #     grpc_service:
            #       google_grpc:
            #         target_uri: 127.0.0.1:9191
            #         stat_prefix: ext_authz
            #       timeout: 0.5s
            - name: envoy.filters.http.router
            forward_client_cert_details: SANITIZE_SET
            set_current_client_cert_details:
              subject: true
              dns: true
              uri: true
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://tech-talk.nutanix.com/app1"
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              # combined_validation_context:
              #   # validate the SPIFFE ID of incoming clients (optionally)
              #   default_validation_context:
              #     match_subject_alt_names:
              #       - exact: "spiffe://tech-talk.nutanix.com/app2"
              #   # obtain the trust bundle from SDS
              #   validation_context_sds_secret_config:
              #     name: "spiffe://tech-talk.nutanix.com"
              #     sds_config:
              #       api_config_source:
              #         api_type: GRPC
              #         grpc_services:
              #           envoy_grpc:
              #             cluster_name: spire_agent
              # tls_params:
              #   ecdh_curves:
              #     - X25519:P-256:P-521:P-384
  clusters:
    - name: service1
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 5001
    - name: spire_agent
      connect_timeout: 0.25s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: spire_agent
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                pipe:
                  path: /run/spire/sockets/agent.sock
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9004

node:
  id: "id1"
  cluster: "cluster1"
