envoy2.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9002
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
                - name: backend2
                  domains:
                    - "*"
                  routes:
                    
                    - match:
                        prefix: "/server2/"
                      route:
                        cluster: service2
                        prefix_rewrite: "/" 
                    - match:
                        prefix: "/server1/"
                      route:
                        cluster: service1
                        prefix_rewrite: "/"
                    - match:
                        prefix: "/server1"
                      route:
                        cluster: service1
                        prefix_rewrite: "/"
                    - match:
                        prefix: "/"
                      route:
                        cluster: service2
                    
            http_filters:
            - name: envoy.filters.http.router
            forward_client_cert_details: SANITIZE_SET
            set_current_client_cert_details:
              subject: true
              dns: true
              uri: true
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://tech-talk.nutanix.com/app2"
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
  clusters:
    - name: service2
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 5002
    - name: service1
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address:  backend-server-service1
                      port_value: 9000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificate_sds_secret_configs:
            - name: "spiffe://tech-talk.nutanix.com/app2"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
            combined_validation_context:
              # validate the SPIFFE ID of incoming clients (optionally)
              default_validation_context:
                match_subject_alt_names:
                  - exact: "spiffe://tech-talk.nutanix.com/app1"
              # obtain the trust bundle from SDS
              validation_context_sds_secret_config:
                name: "spiffe://tech-talk.nutanix.com"
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
            tls_params:
              ecdh_curves:
                - X25519:P-256:P-521:P-384
    - name: spire_agent
      connect_timeout: 0.25s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: spire_agent
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                pipe:
                  path: /run/spire/sockets/agent.sock
    
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9003

node:
  id: "id2"
  cluster: "cluster2"
